revise html & css

--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../../../resources/static/css/styles.css" />
     <title>Zero-Link</title>
   </head>
   <body>
@@ -13,7 +13,7 @@
         <ul>
           <a class="logo" href="#">
             <li>
-              <img src="photo/logo.png" alt="logo" />
+              <img src="../../../resources/static/images/logo.png" alt="logo" />
               Zero-Link
             </li>
           </a>
@@ -40,7 +40,11 @@
         <div class="page1">
           <div class="page1__col1">
             <p class="desc__row1">Zero-Link,</p>
-            <img class="desc__row2" src="photo/text_zeroWaste.png" alt="" />
+            <img
+              class="desc__row2"
+              src="../../../resources/static/images/text_zeroWaste.png"
+              alt=""
+            />
             <div class="desc__row3">
               <p>소상공인들과 함께 지구를 지키는 움직임</p>
               <i class="fa-brands fa-youtube"></i>
@@ -48,36 +52,55 @@
             </div>
           </div>
           <div class="page1__col2">
-            <img class="link" src="photo/logo.png" alt="" />
-            <img class="people" src="photo/people.png" alt="" />
+            <img
+              class="link"
+              src="../../../resources/static/images/logo.png"
+              alt=""
+            />
+            <img
+              class="people"
+              src="../../../resources/static/images/people.png"
+              alt=""
+            />
           </div>
         </div>
         <div class="page2">
           <div class="page2__col1">
             <div class="apple1">
-              <img src="photo/apple.png" alt="" />
+              <img src="../../../resources/static/images/apple.png" alt="" />
               <div class="wrapper1">
                 <p>텀블러 사용 30일</p>
               </div>
             </div>
             <div class="apple2">
-              <img src="photo/apple.png" alt="" />
+              <img src="../../../resources/static/images/apple.png" alt="" />
               <div class="wrapper2">
                 <p>제로링크 다이어리 30일</p>
               </div>
             </div>
           </div>
           <div class="page2__col2">
-            <img class="col2__row1" src="photo/text_challenge.png" alt="" />
-            <img class="col2__row2" src="photo/text_payFree.png" alt="" />
+            <img
+              class="col2__row1"
+              src="../../../resources/static/images/text_challenge.png"
+              alt=""
+            />
+            <img
+              class="col2__row2"
+              src="../../../resources/static/images/text_payFree.png"
+              alt=""
+            />
             <!-- 어느 url로 넘어가는지 정해야 함 (가입하지 않은 경우 회원가입 / 가입한 경우 챌린지 메뉴)-->
             <a class="col2__row3" href="#">
-              <img src="photo/text_start.png" alt="" />
+              <img
+                src="../../../resources/static/images/text_start.png"
+                alt=""
+              />
             </a>
           </div>
           <div class="page2__col3">
             <div class="tree">
-              <img src="photo/tree.png" alt="" />
+              <img src="../../../resources/static/images/tree.png" alt="" />
               <!-- if {user.id}-->
               <p class="data1">100<!--{userChallenges.progress1}--></p>
               <p class="data2">200<!-- {userChallenges.progress2} --></p>
@@ -108,7 +131,7 @@
       <div class="menuList">
         <ul>
           <li class="menu">
-            <img src="./photo/apple.png" alt="" />
+            <img src="../../../resources/static/images/apple.png" alt="" />
             <div class="menu__info">
               <p class="info__store">가게: #{가게이름} (#{거리})</p>
               <p class="info__menu">상품: #{상품이름} (#{상품개수})</p>
@@ -116,7 +139,7 @@
             </div>
           </li>
           <li class="menu">
-            <img src="./photo/apple.png" alt="" />
+            <img src="../../../resources/static/images/apple.png" alt="" />
             <div class="menu__info">
               <p class="info__store">가게: #{가게이름} (#{거리})</p>
               <p class="info__menu">상품: #{상품이름} (#{상품개수})</p>
@@ -124,7 +147,7 @@
             </div>
           </li>
           <li class="menu">
-            <img src="./photo/apple.png" alt="" />
+            <img src="../../../resources/static/images/apple.png" alt="" />
             <div class="menu__info">
               <p class="info__store">가게: #{가게이름} (#{거리})</p>
               <p class="info__menu">상품: #{상품이름} (#{상품개수})</p>
@@ -132,7 +155,7 @@
             </div>
           </li>
           <li class="menu">
-            <img src="./photo/apple.png" alt="" />
+            <img src="../../../resources/static/images/apple.png" alt="" />
             <div class="menu__info">
               <p class="info__store">가게: #{가게이름} (#{거리})</p>
               <p class="info__menu">상품: #{상품이름} (#{상품개수})</p>
@@ -140,7 +163,7 @@
             </div>
           </li>
           <li class="menu">
-            <img src="./photo/apple.png" alt="" />
+            <img src="../../../resources/static/images/apple.png" alt="" />
             <div class="menu__info">
               <p class="info__store">가게: #{가게이름} (#{거리})</p>
               <p class="info__menu">상품: #{상품이름} (#{상품개수})</p>
@@ -148,7 +171,7 @@
             </div>
           </li>
           <li class="menu">
-            <img src="./photo/apple.png" alt="" />
+            <img src="../../../resources/static/images/apple.png" alt="" />
             <div class="menu__info">
               <p class="info__store">가게: #{가게이름} (#{거리})</p>
               <p class="info__menu">상품: #{상품이름} (#{상품개수})</p>
@@ -156,7 +179,7 @@
             </div>
           </li>
           <li class="menu">
-            <img src="./photo/apple.png" alt="" />
+            <img src="../../../resources/static/images/apple.png" alt="" />
             <div class="menu__info">
               <p class="info__store">가게: #{가게이름} (#{거리})</p>
               <p class="info__menu">상품: #{상품이름} (#{상품개수})</p>
@@ -164,7 +187,7 @@
             </div>
           </li>
           <li class="menu">
-            <img src="./photo/apple.png" alt="" />
+            <img src="../../../resources/static/images/apple.png" alt="" />
             <div class="menu__info">
               <p class="info__store">가게: #{가게이름} (#{거리})</p>
               <p class="info__menu">상품: #{상품이름} (#{상품개수})</p>
@@ -179,6 +202,6 @@
       src="https://kit.fontawesome.com/271532994e.js"
       crossorigin="anonymous"
     ></script>
-    <script src="js/slider.js"></script>
+    <script src="../../../resources/static/js/main.js"></script>
   </body>
 </html>
