--- a/src/main/resources/templates/home/showMenu.html
+++ b/src/main/resources/templates/home/showMenu.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>menu | Zero-Link</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../../../resources/static/css/styles.css" />
   </head>
   <body>
     <header>
@@ -13,7 +13,7 @@
         <ul>
           <a class="logo" href="#">
             <li>
-              <img src="photo/logo.png" alt="logo" />
+              <img src="../../../resources/static/images/logo.png" alt="logo" />
               Zero-Link
             </li>
           </a>
@@ -38,7 +38,7 @@
     <section class="product">
       <div class="wrapper">
         <div class="product__col1">
-          <img src="photo/people.png" alt="" />
+          <img src="../../../resources/static/images/people.png" alt="" />
           <a href="#">실시간 수량 알림 신청</a>
         </div>
         <div class="product__col2">
